# strawberry

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json
.cache/clangd/index/: buffer.c.A81C76B1F6929520.idx  buffer.h.9358ADAF796525EB.idx  common.h.46683E19F3C51543.idx  program.c.3D942193166FA03E.idx  sbconf.h.23E6CF9BA5426027.idx  socket.c.BE510081C5333BDD.idx  socket.h.A5037E2FAD139753.idx  socket.h.BB48DACCC6923AFB.idx  strawberry.h.0617A77160F3D5AC.idx  type.h.DE40203EAF943931.idx
cmake/: KernelHeadersConfig.cmake
core/: CMakeLists.txt
core/include/: strawberry.h
core/include/strawberry/: common.h  console.h  sbconf.h  socket.h  type.h
core/lib/: CMakeLists.txt
core/src/: CMakeLists.txt  buffer.c  buffer.h  parameter.c  parameter.h  progress.c  progress.h  sbconf.h.in  socket.c  socket.h
embedded/: CMakeLists.txt  README.md
embedded/sensors/temperature/: Cargo.toml  README.md
embedded/sensors/temperature/src/: main.rs
gateway/: CMakeLists.txt  program.c
lib/: CMakeLists.txt
pkg/: CMakeLists.txt  program.c
