[package]
name = "temperature"
version = "0.1.0"
authors = ["Eugene Komisarenko <ekomisarenko@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "temperature"
test = false
bench = false

[dependencies]
panic-halt = "0.2"
ufmt = "0.1"
nb = "1.0"
embedded-hal = "0.2"
embedded-nal = "0.6"
w5500 = "0.4"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "7dfa6d322b9df98b2d98afe0e14a97afe0187ac1"
features = ["arduino-uno"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"
